<resources>
    <string name="app_name">Weather</string>
    <string name="open">Open Navigation Drawer</string>
    <string name="close">Close Navigation Drawer</string>
    <string name="login">Login</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="register">Register</string>
    <string name="click_to_login">Click To Login</string>
    <string name="click_to_register">Click To Register</string>
    <string name="register_an_account">Register An Account</string>
    <string name="log_in_to_your_account">Log In To Your Account</string>
</resources>